--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="/images/ourjob-1.jpg" alt="Написання коду за ноутбуком" width="370" height="294"></li>
-                <li><img src="/images/ourjob-2.jpg" alt="Розробка мобільної версії" width="370" height="294"></li>
-                <li><img src="/images/ourjob-3.jpg" alt="Створення дизайну" width="370" height="294"></li>
+                <li><img src="./images/ourjob-1.jpg" alt="Написання коду за ноутбуком" width="370" height="294"></li>
+                <li><img src="./images/ourjob-2.jpg" alt="Розробка мобільної версії" width="370" height="294"></li>
+                <li><img src="./images/ourjob-3.jpg" alt="Створення дизайну" width="370" height="294"></li>
             </ul>
         </section>
 
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/mark-guerrero.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                <li><img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="270" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="/images/tom-ford.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                <li><img src="/images/tom-ford.jpg" alt="Tom Ford" width="270" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/camila-garcia.jpg" alt="Микола Тарасов" width="270" height="260">
+                <li><img src="/images/camila-garcia.jpg" alt="Camila Garcia" width="270" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="/images/daniel-wilson.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                <li><img src="/images/daniel-wilson.jpg" alt="Daniel Wilson" width="270" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
