--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="/images/tom-ford.jpg" alt="Tom Ford" width="270" height="260">
+                <li><img src="./images/tom-ford.jpg" alt="Tom Ford" width="270" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/camila-garcia.jpg" alt="Camila Garcia" width="270" height="260">
+                <li><img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="270" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="/images/daniel-wilson.jpg" alt="Daniel Wilson" width="270" height="260">
+                <li><img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="270" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
