--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="./">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="#">Studio</a></li>
@@ -30,7 +30,6 @@
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-
         <section>
             <ul>
                 <li>
@@ -88,7 +87,7 @@
     </main>
 
     <footer>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="./">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
