--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/ourjob-1.jpg" alt="НWriting code for a laptop" width="370" height="294"></li>
+                <li><img src="./images/ourjob-1.jpg" alt="Writing code for a laptop" width="370" height="294"></li>
                 <li><img src="./images/ourjob-2.jpg" alt="Development of the mobile version" width="370" height="294"></li>
                 <li><img src="./images/ourjob-3.jpg" alt="Creating a design" width="370" height="294"></li>
             </ul>
